# financial-llm-advisor

./: .gitignore  README.md  main.py  pyproject.toml  setup.py
.github/workflows/: tests.yml
config/: model_config.yaml  training_config.yaml
docs/: ARCHITECTURE.md  BENCHMARKING.md  SYSTEM_DESIGN.md
scripts/: deploy.sh  evaluate.sh  train.sh
src/: __init__.py  config.py  dataset_loader.py  evaluator.py  inference.py  trainer.py  utils.py
tests/: __init__.py  init.py  test_dataset.py  test_evaluator.py  test_inference.py
