[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-llm-advisor"
version = "0.1.0"
description = "Production-grade fine-tuned LLM for institutional investment decision support"
readme = "README.md"
requires-python = ">=3.9,<=3.14"
license = {text = "MIT"}

keywords = ["llm", "finance", "fine-tuning", "phi", "investment"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "torch>=2.1.0",
    "transformers>=4.38.0",
    "datasets>=2.17.0",
    "accelerate>=0.26.0",
    "peft>=0.7.1",
    "bitsandbytes>=0.41.2",
    "wandb>=0.16.0",
    "evaluate>=0.4.0",
    "pandas>=2.1.3",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "isort>=5.13.2",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
]

[project.urls]
Homepage = "https://github.com/selmantayyar/financial-llm-advisor"
Documentation = "https://github.com/selmantayyar/financial-llm-advisor/tree/main/docs"
Repository = "https://github.com/selmantayyar/financial-llm-advisor.git"
Issues = "https://github.com/selmantayyar/financial-llm-advisor/issues"

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false